# algo-trading

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
scripts/: generate_alpaca_models.sh  generate_clients.sh  generate_shared_models.sh
specs/: common_models.yaml
src/: main.py  orchestrator.py
src/client/: client_factory.py
src/client/alpaca/: adapters.py
src/client/alpaca/resources/: .alpaca-trading-openapi-python-client-config.json  trading_spec.json
src/orchestrator/: base_orchestrator.py  default_orchestrator.py
src/portfolio/allocation/: base_allocator.py  default_allocator.py
src/portfolio/risk/: base_risk.py  default_risk.py
src/service/brokerage/: base_brokerage_service.py
src/service/brokerage/alpaca/: alpaca_brokerage_service.py
src/service/data/: base_dao.py
src/service/data/alpaca/: alpaca_dao.py
src/shared/: model.py
src/strategy/: base_strategy.py  moving_average_crossover.py
src/thesis/: SMA_thesis.py  base_thesis.py  trading_thesis.py
src/trading_bot_mvp/: main.py  orchestrator.py  settings.py
src/trading_bot_mvp/client/: base_client.py  client_factory.py
src/trading_bot_mvp/client/alpaca/: adapters.py  alpaca_client.py  data_models.py  data_spec.yaml  settings.py  trading_models.py  trading_spec.json  trading_spec.yaml
src/trading_bot_mvp/client/alpaca/api_field_mappings/: model.py
src/trading_bot_mvp/client/alpaca/resources/: .alpaca-data-openapi-python-client-config.json  data_spec.json
src/trading_bot_mvp/service/: base_service.py
src/trading_bot_mvp/service/brokerage/: base_brokerage_service.py
src/trading_bot_mvp/service/brokerage/alpaca/: alpaca_brokerage_service.py
src/trading_bot_mvp/service/brokerage/alpaca/api_field_mappings/: model.py
src/trading_bot_mvp/service/data/: bars_column_models.py  base_dao.py
src/trading_bot_mvp/service/data/alpaca/: alpaca_dao.py
src/trading_bot_mvp/shared/: __init__.py  model.py
src/trading_bot_mvp/shared/mocks/: mocks.py
src/trading_bot_mvp/strategy/: base_strategy.py  moving_average_crossover.py
src/trading_bot_mvp/thesis/: trading_thesis.py
src/utlis/plotting/: MAC_plotter.py  base_strategy_plotter.py
tests/: test_alpaca_brokerage_service.py  test_alpaca_client.py  test_alpaca_dao.py  test_base_client.py  test_base_dao.py  test_base_service.py  test_client_factory.py  test_field_map.py  test_moving_average_crossover.py  test_orchestrator.py  test_settings.py  test_trading_thesis.py
