[project]
name = "algo-trading"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael-Perillo", email = "michael@perillo.me"},
]
dependencies = ["pydantic>=2.11.7", "pydantic-settings>=2.9.1", "pandas>=2.3.0", "alpaca-trade-api>=3.2.0", "httpx>=0.28.1", "pandera>=0.24.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.packages]
include = ["trading_bot_mvp"]
from = "src"

[tool.mypy]
python_version = "3.13"
plugins = ["pandera.mypy"]
# enable strict mode
strict = true
exclude = [
    "src/trading_bot_mvp/shared/model",
    "src/trading_bot_mvp/client/alpaca/trading_models",
    "src/trading_bot_mvp/client/alpaca/data_models"
]

[[tool.mypy.overrides]]
module = [
    "trading_bot_mvp.client.alpaca.trading_models",
    "trading_bot_mvp.client.alpaca.data_models"
]
follow_imports = "skip"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# Select the rule codes to enforce.
# "E" and "F" are Pyflakes/Pycodestyle errors (essential).
# "W" are warnings.
# "I" is for isort (import sorting).
# "UP" is for pyupgrade (modernizing syntax).
# "ANN" is for type annotations.
select = ["E", "F", "W", "I", "UP"]

# Ignore certain errors if needed (e.g., a specific print statement)
# ignore = ["E501"]

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]




[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = { cmd = "python src/trading_bot_mvp/main.py", env = { PYTHONPATH = "src" } }
test = "pytest"
coverage = "pytest --cov=src/trading_bot_mvp --cov-report=lcov --cov-report=json" # Target the source code for coverage
# Lints both the source and test directories, with auto-fix enabled
lint = "ruff check src tests --fix"
# Formats both the source and test directories
format = "ruff format src tests"
# Type checks both the source and test directories
typecheck = "mypy src tests"
generate_models = "./scripts/generate_alpaca_models.sh"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "datamodel-code-generator>=0.31.1",
    "pandas-stubs>=2.2.3.250527",
    "pre-commit>=4.2.0",
    "pdm>=2.25.3",
]

[tool.ruff.lint.per-file-ignores]
"src/trading_bot_mvp/service/data/bars_column_models.py" = ["E501"]
"src/trading_bot_mvp/shared/model.py" = ["E501", "E741"]
"src/trading_bot_mvp/client/alpaca/trading_models.py" = ["E501", "UP045"]
"src/trading_bot_mvp/client/alpaca/data_models.py" = ["E501", "UP045", "E741"]
