[project]
name = "algo-trading"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael-Perillo", email = "michael@perillo.me"},
]
dependencies = ["pydantic>=2.11.7", "pydantic-settings>=2.9.1", "pandas>=2.3.0", "alpaca-trade-api>=3.2.0", "httpx>=0.28.1", "pandera>=0.24.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.packages]
include = ["src"]

[tool.mypy]
python_version = "3.13"
plugins = ["pandera.mypy"]
# enable strict mode
strict = true
exclude = [
    "src/shared/model",
    "src/client/alpaca/generated/.*",
]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "client.alpaca.generated.*",
]
follow_imports = "skip"

[tool.ruff]
line-length = 100
exclude = [
    "src/client/alpaca/generated",
]

[tool.ruff.lint]
# Select the rule codes to enforce.
# "E" and "F" are Pyflakes/Pycodestyle errors (essential).
# "W" are warnings.
# "I" is for isort (import sorting).
# "UP" is for pyupgrade (modernizing syntax).
# "ANN" is for type annotations.
select = ["E", "F", "W", "I", "UP"]

# Ignore certain errors if needed (e.g., a specific print statement)
# ignore = ["E501"]

[tool.ruff.format]
# Use single quotes for strings
quote-style = "single"

[tool.pytest.ini_options]
pythonpath = ["src"]






[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = { cmd = "python src/main.py", env = { PYTHONPATH = "src" } }
test = "pytest"
coverage = "pytest --cov=src --cov-report=term-missing --cov-report=lcov --cov-report=json --cov-fail-under=80" # Target the source code for coverage
# Lints both the source and test directories, with auto-fix enabled
lint = "ruff check src tests --fix"
# Formats both the source and test directories
format = "ruff format src tests"
# Type checks both the source and test directories
typecheck = "mypy src tests"
generate_models = "./scripts/generate_alpaca_models.sh"
generate_clients = "./scripts/generate_clients.sh"

[tool.coverage.run]
omit = [
    "src/client/alpaca/generated/*", # Exclude generated files from coverage
    "src/main.py", # Exclude main.py from coverage (essentially a script)
]

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "datamodel-code-generator>=0.31.1",
    "pandas-stubs>=2.2.3.250527",
    "pre-commit>=4.2.0",
    "pdm>=2.25.3",
    "openapi-python-client>=0.25.1",
    "types-python-dateutil>=2.9.0.20250516",
]

[tool.ruff.lint.per-file-ignores]
"src/service/data/bars_column_models.py" = ["E501"]
"src/shared/model.py" = ["E501", "E741"]
"src/client/alpaca/trading_models.py" = ["E501", "UP045"]
"src/client/alpaca/data_models.py" = ["E501", "UP045", "E741"]
